# kobo-rs

./: Cargo.toml  README.md  build_toolchain.sh  kobo_deploy.sh  rust-toolchain.toml
examples/: display.rs  gui.rs  touch2coord.rs
src/: coords.rs  lib.rs
src/display/: chr_display.rs  color.rs  error.rs  mod.rs  sizing.rs
src/display/chr_gui/: button.rs  mod.rs  text_align.rs  title_bar.rs
src/input/: error.rs  mod.rs  touch.rs
toolchain/: kobo-cross-armhf.dockerfile
