[package]
name = "kobo"
version = "0.3.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "A library for interacting with Kobo devices"
documentation = "https://docs.rs/kobo"
readme = "README.md"
homepage = "https://github.com/ewpratten/kobo-rs"
repository = "https://github.com/ewpratten/kobo-rs"
license = "GPL-3.0"
keywords = ["fbink", "kobo", "eink"]
categories = ["api-bindings", "embedded", "hardware-support", "rendering::graphics-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
evdev-rs = "0.5.0"
thiserror = "1.0.30"
nalgebra = "0.31.0"
chrono = "0.4.19"
regex = "1.5.5"
# tokio = { version = "1.17.0", features = ["rt"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
